# androDashGL

./: README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  egl_context.cpp  egl_context.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h
app/src/main/res/values/: strings.xml
